[package]
name = "loggery"
version = "0.1.0"
authors = ["Mohsen Rad (🌱) <irregular.celery@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT"

[features]
default = ["std", "metadata", "runtime_levels"]

std = []
static = []
metadata = []
runtime_levels = []

# Logging levels (logs below a certain level are ignored)
min_level_off = []
min_level_trace = []
min_level_debug = []
min_level_info = []
min_level_warn = []
min_level_error = []

[dependencies]
