[package]
name = "loggery"
version = "0.1.0"
authors = ["Mohsen Rad (🌱) <irregular.celery@gmail.com>"]
repository = "https://github.com/IrregularCelery/loggery"
description = "A lightweight, `no_std`-friendly logging library for Rust"
documentation = "https://docs.rs/loggery"
readme = "README.md"
keywords = ["log", "logging", "trace"]
categories = ["development-tools::debugging", "no-std", "embedded"]
exclude = [".github/", ".gitignore"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT"

[package.metadata.docs.rs]
no-default-features = true
features = ["std", "metadata", "extension", "runtime_level"]

[features]
default = ["std", "metadata", "runtime_level"]

std = []
static = []
static_default = ["std", "static"]
metadata = []
extension = []
runtime_level = []

# Logging levels (logs below a certain level are ignored)
min_level_off = []
min_level_trace = []
min_level_debug = []
min_level_info = []
min_level_warn = []
min_level_error = []

[dependencies]
